manifests/label-studio/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: label-studio
  labels:
    app: label-studio
  annotations:
    openshift.io/display-name: "Label Studio"
