manifests/label-studio/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: label-studio
  labels:
    app: label-studio
spec:
  port:
    targetPort: service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: label-studio-ls-app
    weight: 100
  wildcardPolicy: None
